--- a/main.html
+++ b/main.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Title</title>
+    </head>
+    <body>
+        <H1>My first commit</H1>
+        <p>Studying with Javarush create repository and commit changes</p>
+    </body>
 </html>
